MDA-133: unbundle "endorsed" libraries from distribution